--- a/parabens.html
+++ b/parabens.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
+  
   <style>
     body {
       margin: 0;
@@ -32,7 +33,8 @@
     }
 
     img {
-      max-width: 500px;
+      max-width: 700px;
+      width: 100%;
       height: auto;
       margin: 10px;
       border-radius: 15px;
@@ -61,6 +63,39 @@
 
     .button:hover {
       background: #e64a45;
+    }
+
+    /* Responsividade para telas menores */
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 2.5rem;
+      }
+
+      p {
+        font-size: 1.2rem;
+        padding: 0 15px;
+      }
+
+      .button {
+        font-size: 14px;
+        padding: 8px 15px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 2rem;
+      }
+
+      p {
+        font-size: 1rem;
+        padding: 0 10px;
+      }
+
+      .button {
+        font-size: 12px;
+        padding: 5px 10px;
+      }
     }
   </style>
 </head>
